Updating PBR testsuite - Make use of Graphene page abstractions - Improve on conditions (using equals when it should equal vs contains) - Increased arquillian graphene wait timeouts, trying to reduce intermittent failures - Several enhancements