@@ -1,13 +1,17 @@
 package org.jboss.portletbridge.test.component.h.commandLink;
 
+import static org.jboss.arquillian.graphene.Graphene.element;
+import static org.jboss.arquillian.graphene.Graphene.waitGui;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import java.net.URL;
 
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.container.test.api.RunAsClient;
 import org.jboss.arquillian.drone.api.annotation.Drone;
+import org.jboss.arquillian.graphene.Graphene;
 import org.jboss.arquillian.junit.Arquillian;
 import org.jboss.arquillian.portal.api.PortalTest;
 import org.jboss.arquillian.portal.api.PortalURL;
@@ -16,8 +20,10 @@ import org.jboss.portletbridge.test.TestDeployment;
 import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.WebElement;
+import org.openqa.selenium.htmlunit.HtmlUnitDriver;
+import org.openqa.selenium.support.FindBy;
 
 @RunWith(Arquillian.class)
 @PortalTest
@@ -32,13 +38,23 @@ public class CommandLinkTest {
         // .addAsWebResource("resources/stylesheet.css", "resources/stylesheet.css");
     }
 
-    protected static final By SUBMIT_LINK = By.xpath("//a[contains(@id,':submit')]");
-    protected static final By RESET_COUNTER_LINK = By.xpath("//a[contains(@id,':reset_counter')]");
-    protected static final By AJAX_LINK = By.xpath("//a[contains(@id,':ajax')]");
-    protected static final By ALERT_LINK = By.xpath("//a[contains(@id,':alert')]");
+    @FindBy(xpath = "//a[contains(@id,':submit')]")
+    private WebElement submitLink;
 
-    protected static final By OUTPUT_TEXT = By.xpath("//span[contains(@id,':output')]");
-    protected static final By INPUT_TEXT = By.xpath("//input[contains(@id,':input')]");
+    @FindBy(xpath = "//a[contains(@id,':reset_counter')]")
+    private WebElement resetCounterLink;
+
+    @FindBy(xpath = "//a[contains(@id,':ajax')]")
+    private WebElement ajaxLink;
+
+    @FindBy(xpath = "//a[contains(@id,':alert')]")
+    private WebElement alertLink;
+
+    @FindBy(xpath = "//span[contains(@id,':output')]")
+    private WebElement outputText;
+
+    @FindBy(xpath = "//input[contains(@id,':input')]")
+    private WebElement inputText;
 
     @ArquillianResource
     @PortalURL
@@ -49,8 +65,8 @@ public class CommandLinkTest {
     public void testCommandButtonValue(@Drone WebDriver driver) throws Exception {
         driver.get(portalURL.toString());
 
-        assertEquals("Check that SUBMIT button value is '" + CommandLinkBean.SUBMIT_LABEL + "'.", CommandLinkBean.SUBMIT_LABEL,
-                driver.findElement(SUBMIT_LINK).getText());
+        assertTrue("Check that SUBMIT button value is '" + CommandLinkBean.SUBMIT_LABEL + "'.",
+                Graphene.element(submitLink).textEquals(CommandLinkBean.SUBMIT_LABEL).apply(driver));
     }
 
     @Test
@@ -58,29 +74,30 @@ public class CommandLinkTest {
     public void testCommandLinkAction(@Drone WebDriver driver) throws Exception {
         driver.get(portalURL.toString());
 
-        int oldValue = Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText());
-        int step = Integer.valueOf(driver.findElement(INPUT_TEXT).getAttribute("value"));
-        driver.findElement(SUBMIT_LINK).click();
-        assertEquals("New value should be " + oldValue + "+" + step + " = " + (oldValue + step), new Integer(oldValue + step),
-                Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText()));
+        int oldValue = Integer.valueOf(outputText.getText());
+        int step = Integer.valueOf(inputText.getAttribute("value"));
+        submitLink.click();
+
+        assertTrue("New value should be " + oldValue + "+" + step + " = " + (oldValue + step),
+                Graphene.element(outputText).textEquals(new Integer(oldValue + step).toString()).apply(driver));
     }
 
     @Test
     @RunAsClient
-    public void testCommandLinkReset(@Drone WebDriver driver) throws Exception {
+    public void testCommandLinkResetCounter(@Drone WebDriver driver) throws Exception {
         driver.get(portalURL.toString());
 
         // increase step and add, just to make sure
-        driver.findElement(INPUT_TEXT).sendKeys("5");
-        driver.findElement(SUBMIT_LINK).click();
+        inputText.sendKeys("5");
+        submitLink.click();
 
-        String oldText = driver.findElement(OUTPUT_TEXT).getText();
-        assertFalse("Check that the Output is not 0 after adding at least 5.", "0".equals(oldText));
+        assertFalse("Check that OUTPUT text is not 0 after adding at least 5.",
+                Graphene.element(outputText).textEquals("0").apply(driver));
 
-        driver.findElement(RESET_COUNTER_LINK).click();
-        String newText = driver.findElement(OUTPUT_TEXT).getText();
+        resetCounterLink.click();
 
-        assertEquals("Check that OUTPUT text is '0' after resetting.", "0", newText);
+        assertTrue("Check that OUTPUT text is '0' after resetting.",
+                Graphene.element(outputText).textEquals("0").apply(driver));
     }
 
     @Test
@@ -88,36 +105,40 @@ public class CommandLinkTest {
     public void testCommandLinkSubmit(@Drone WebDriver driver) throws Exception {
         driver.get(portalURL.toString());
 
-        int oldStep = Integer.valueOf(driver.findElement(INPUT_TEXT).getAttribute("value"));
+        int oldStep = Integer.valueOf(inputText.getAttribute("value"));
         int newStep = oldStep + 2; // just to make sure it's not the same
-        driver.findElement(INPUT_TEXT).sendKeys("\u0008"); // delete
-        driver.findElement(INPUT_TEXT).sendKeys(String.valueOf(newStep)); // set to new value
+        inputText.sendKeys("\u0008"); // delete
+        inputText.sendKeys(String.valueOf(newStep)); // set to new value
 
-        int oldValue = Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText());
-        driver.findElement(SUBMIT_LINK).click();
-        assertEquals("New value for Step should be " + newStep, new Integer(newStep),
-                Integer.valueOf(driver.findElement(INPUT_TEXT).getAttribute("value")));
-        assertEquals("New value should be " + oldValue + "+" + newStep + " = " + (oldValue + newStep), new Integer(oldValue
-                + newStep), Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText()));
-        Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText());
+        int oldValue = Integer.valueOf(outputText.getText());
+        submitLink.click();
+
+        assertTrue("New value for Step should be " + newStep,
+                Graphene.attribute(inputText, "value").valueEquals(String.valueOf(newStep)).apply(driver));
+        assertTrue("New value should be " + oldValue + "+" + newStep + " = " + (oldValue + newStep),
+                Graphene.element(outputText).textEquals(String.valueOf(oldValue + newStep)).apply(driver));
     }
 
-    // @Test
-    // @RunAsClient
-    // public void testCommandLinkOnClickJS(@Drone WebDriver driver) throws Exception {
-    // driver.get(portalURL.toString());
-    //
-    // // click the submit a few times ...
-    // for(int i = 0; i < 3; i++) {
-    // driver.findElement(SUBMIT_LINK).click();
-    // }
-    //
-    // String curValue = driver.findElement(OUTPUT_TEXT).getText();
-    // driver.findElement(ALERT_LINK).click();
-    // // FIXME: this test fails with HtmlUnitDriver as there's no alert() support
-    // assertEquals("Check that Alert text is: " + "Current Value is " + curValue, "Current Value is " + curValue,
-    // driver.switchTo().alert().getText());
-    // }
+    @Test
+    @RunAsClient
+    public void testCommandLinkOnClickJS(@Drone WebDriver driver) throws Exception {
+        // FIXME: this test fails with HtmlUnitDriver as there's no alert() support
+        if(driver instanceof HtmlUnitDriver) {
+            return;
+        }
+        driver.get(portalURL.toString());
+
+        // click the submit a few times ...
+        for(int i = 0; i < 3; i++) {
+            submitLink.click();
+        }
+
+        String curValue = outputText.getText();
+        alertLink.click();
+
+        assertEquals("Check that Alert text is: " + "Current Value is " + curValue,
+                "Current Value is " + curValue, driver.switchTo().alert().getText());
+    }
 
     @Test
     @RunAsClient
@@ -125,23 +146,23 @@ public class CommandLinkTest {
         driver.get(portalURL.toString());
 
         // FIXME: Ajax only works after one *real* submit...
-        driver.findElement(SUBMIT_LINK).click();
+        submitLink.click();
 
         String curURL = driver.getCurrentUrl();
 
-        int oldValue = Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText());
-        int step = Integer.valueOf(driver.findElement(INPUT_TEXT).getAttribute("value"));
+        int oldValue = Integer.valueOf(outputText.getText());
+        int step = Integer.valueOf(inputText.getAttribute("value"));
 
         // click the ajax button a few times ...
         int nTimes = 4;
         for (int i = 0; i < nTimes; i++) {
-            driver.findElement(AJAX_LINK).click();
-            // wait for ajax
-            Thread.sleep(500);
+            String oldText = outputText.getText();
+            ajaxLink.click();
+            waitGui(driver).until(element(outputText).not().textEquals(oldText));
         }
 
-        assertEquals("New value should be " + oldValue + "+" + step + "*" + nTimes + " = " + (oldValue + step * nTimes),
-                new Integer(oldValue + step * nTimes), Integer.valueOf(driver.findElement(OUTPUT_TEXT).getText()));
+        assertTrue("New value should be " + oldValue + "+" + step + "*" + nTimes + " = " + (oldValue + step * nTimes),
+                Graphene.element(outputText).textEquals(String.valueOf(oldValue + step * nTimes)).apply(driver));
 
         assertEquals("Check that URL is the same as this is an ajax request.", curURL, driver.getCurrentUrl());
     }
